[gd_scene load_steps=11 format=3 uid="uid://byola652f80to"]

[ext_resource type="Shader" uid="uid://wqtjpvgabkbc" path="res://Shaders/scroll.gdshader" id="1_321qa"]
[ext_resource type="Script" uid="uid://sm7muxfejjre" path="res://Scripts/level_times.gd" id="1_kb6um"]
[ext_resource type="Texture2D" uid="uid://cutuoqs1668po" path="res://Assets/Backgrounds/Brown.png" id="2_w3mj8"]
[ext_resource type="Texture2D" uid="uid://dk4phovqr2v7a" path="res://Assets/Buttons/Back.png" id="5_mdde6"]
[ext_resource type="Texture2D" uid="uid://iy8hsqq6otta" path="res://Assets/Buttons/Next.png" id="24_3tlta"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0iv12"]
shader = ExtResource("1_321qa")
shader_parameter/speed = 0.25
shader_parameter/x_movement = false
shader_parameter/y_movement = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v5m2m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pr21a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bv5fa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_530mx"]

[node name="Level Times" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kb6um")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_0iv12")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_w3mj8")
stretch_mode = 1

[node name="Slide1" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -20.0
offset_right = 244.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Row1" type="HBoxContainer" parent="Slide1"]
layout_mode = 2
alignment = 1

[node name="Row2" type="HBoxContainer" parent="Slide1"]
layout_mode = 2
alignment = 1

[node name="Row3" type="HBoxContainer" parent="Slide1"]
layout_mode = 2
alignment = 1

[node name="Row4" type="HBoxContainer" parent="Slide1"]
layout_mode = 2
alignment = 1

[node name="Row5" type="HBoxContainer" parent="Slide1"]
layout_mode = 2
alignment = 1

[node name="Slide2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -20.0
offset_right = 244.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Row1" type="HBoxContainer" parent="Slide2"]
layout_mode = 2
alignment = 1

[node name="Row2" type="HBoxContainer" parent="Slide2"]
layout_mode = 2
alignment = 1

[node name="Row3" type="HBoxContainer" parent="Slide2"]
layout_mode = 2
alignment = 1

[node name="Row4" type="HBoxContainer" parent="Slide2"]
layout_mode = 2
alignment = 1

[node name="Row5" type="HBoxContainer" parent="Slide2"]
layout_mode = 2
alignment = 1

[node name="Slide3" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -20.0
offset_right = 244.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Row1" type="HBoxContainer" parent="Slide3"]
layout_mode = 2
alignment = 1

[node name="Row2" type="HBoxContainer" parent="Slide3"]
layout_mode = 2
alignment = 1

[node name="Row3" type="HBoxContainer" parent="Slide3"]
layout_mode = 2
alignment = 1

[node name="Row4" type="HBoxContainer" parent="Slide3"]
layout_mode = 2
alignment = 1

[node name="Row5" type="HBoxContainer" parent="Slide3"]
layout_mode = 2
alignment = 1

[node name="PreviousButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -25.0
offset_right = 118.0
offset_bottom = 25.0
grow_vertical = 2
scale = Vector2(-1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_v5m2m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pr21a")
icon = ExtResource("24_3tlta")
flat = true
icon_alignment = 1
expand_icon = true

[node name="NextButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -25.0
offset_right = -18.0
offset_bottom = 25.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_v5m2m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pr21a")
icon = ExtResource("24_3tlta")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 12.0
offset_top = 11.0
offset_right = 62.0
offset_bottom = 61.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_bv5fa")
theme_override_styles/hover = SubResource("StyleBoxEmpty_530mx")
icon = ExtResource("5_mdde6")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
